Improved Java 20+ compatibility